# Chromatica

./: .gitignore  CMakeLists.txt  LeftTabBar.qml  README.md  main.qml  qml.qrc
src/: AccountView.qml  Board.qml  DragDelegate.qml  LeftNavigPanel.qml  LeftTabBar.qml  ListElementsModel.cpp  ListElementsModel.h  Logger.cpp  Logger.h  PetsModel.qml  Task.h  TaskDelegate.qml  TaskUtils.cpp  TaskUtils.h  TasksModel.cpp  TasksModel.h  TasksModel.qml  TasksView.qml  main.cpp  main.qml  qml.qrc
src/app.settings/: Colors.qml
src/left.navig.panel/: IconImage.qml  LeftNavigPanel.qml  LeftTabBar.qml  LeftTabButton.qml
src/views.left.panel/account/: AccountView.qml
src/views.left.panel/settings/: SettingsView.qml
src/views.left.panel/tasks/: Board.qml  TaskDelegate.qml  TasksView.qml
